# COS72-Tauri

./: .gitignore  .gitmodules  CHANGES.md  Dockerfile.eth-wallet-mock  ETH-WALLET-MOCK-README.md  FEATURES.md  NOTICE  PLAN.md  RASPI-TEE-SETUP.md  README.md  RELEASE.md  SOLUTION.md  TAURI-COMMUNICATION-GUIDE.md  build.sh  debug.sh  deploy.md  docker-compose.yml  eth-wallet-service-mock.js  jest.config.js  jest.setup.js  log-monitor.js  mac-release.sh  next.config.js  package.json  passkey-test-result-2025-05-06T16-10-40-192Z.json  passkey-test-result-2025-05-06T16-13-12-298Z.json  passkey-test-result-2025-05-06T16-14-23-465Z.json  passkey-test-result-2025-05-06T16-15-08-454Z.json  pnpm-lock.yaml  raw-output-2025-05-06T16-15-08-445Z.txt  run.sh  run_tests.bat  run_tests.sh  test-passkey.js  test-tauri-commands.js  test-tauri-passkey.js  test-webauthn.js  tsconfig.json
.cursor/rules/: tauri.mdc
.github/workflows/: release.yml
__tests__/: index.test.tsx  plugins.test.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/examples/: direct_test.rs  passkey_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: demo.rs  lib.rs  main.rs
src-tauri/src/fido/: biometric.rs  mod.rs  passkey.rs  webauthn.rs
src-tauri/src/hardware/: detect.rs  detect_test.rs  mod.rs  system_info.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/tee/: adapter_factory.rs  adapter_interface.rs  mod.rs  optee_adapter.rs  teaclave_adapter.rs
src/components/: Layout.tsx  Navigation.tsx  TauriApiStatus.tsx
src/lib/: passkey-manager-simple.ts  passkey-manager.ts  tauri-api.ts  tauri-mock.ts  webauthn-api.ts
src/pages/: _app.tsx  debug.tsx  eth-wallet.tsx  index.tsx  passkey-server.tsx  plugins.tsx  register-passkey.tsx  tauri-communication-demo.tsx  tauri-debug.tsx  tauri-env-check.tsx  test-passkey.tsx
test-app/: index.html
