[package]
name = "cos72-tauri"
version = "0.2.6"
description = "Tauri based COS72 application framework"
authors = ["COS72 Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
# Tauri 2.0的features已经改变，不再使用dialog-all等命名
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.8"
sha2 = "0.10.7"
hex = "0.4.3"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
tokio = { version = "1.32.0", features = ["full"] }
base64 = "0.21.3"
rustc_version_runtime = "0.2.1"
chrono = "0.4.37"

[dev-dependencies]
tempfile = "3.8.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# 配置构建属性
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s" 

# 示例配置
[[example]]
name = "direct_test"
path = "examples/direct_test.rs" 
