[package]
name = "cos72-tauri"
version = "0.5.0"
description = "COS72 Tauri Application"
authors = ["COS72 Team"]
license = "MIT"
repository = ""
edition = "2021"

# 项目元数据
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin"]

# 参见 https://tauri.app/v1/guides/building/
[build-dependencies]
tauri-build = { version = "2.0.0-beta.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.4", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.29.8"
sha2 = "0.10"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.28.0", features = ["full"] }
base64 = "0.21"
rustc_version_runtime = "0.2.1"
chrono = "0.4.26"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
once_cell = "1.18.0"
async-trait = "0.1.68"
num_cpus = "1.16.0"
hostname = "0.3.1"

# WebAuthn/FIDO2 依赖 - 更新到最新版本
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation"] }
webauthn-rs-core = "0.5.1"
webauthn-rs-proto = "0.5.1"
webauthn-authenticator-rs = { version = "0.5.0", features = ["softpasskey", "ctap2", "crypto"], optional = true }
lazy_static = "1.4"
getrandom = "0.2"
url = "2.4"
tracing = "0.1.40"

# 可选: 用于本地设备支持 (如需直接与设备交互)
# 这个注释可以删除，因为我们已经定义了上面的可选依赖

[dev-dependencies]
tempfile = "3.8.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# 启用设备直接支持
device-support = ["dep:webauthn-authenticator-rs"]

# 配置构建属性
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# 示例配置
[[example]]
name = "direct_test"
path = "examples/direct_test.rs"

[[example]]
name = "passkey_test"
path = "examples/passkey_test.rs" 
